fixed save link being not clickable on mobiles

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -180,3 +180,12 @@ a, a:visited{
     height: inherit;
     max-width: 100vw;
 }
+
+#post-save {
+    cursor: pointer;
+    user-select: none;
+}
+
+#post-save:hover {
+    text-decoration: underline;
+}
